force-app/main/default/objects/GSquareSalesArenaMetric__mdt/GSquareSalesArenaMetric__mdt.object-meta.xml
<CustomObject>
    <description>Optional declarative override for GSquareSalesArenaWrapper&apos;s hardcoded metric defaults. Lets an admin remap a Salesforce field from Setup with NO code deployment. Empty by default -- the app works fully without any records here.</description>
    <label>GSquare Sales Arena Metric</label>
    <pluralLabel>GSquare Sales Arena Metrics</pluralLabel>
</CustomObject>