force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Aggregate_Type__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Type__c</fullName>
    <label>Aggregate Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>