force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Date_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_API__c</fullName>
    <label>Date Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>