force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Denominator_Key__c.field-meta.xml
<CustomField>
    <fullName>Denominator_Key__c</fullName>
    <label>Denominator Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>