force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Is_Rate__c.field-meta.xml
<CustomField>
    <fullName>Is_Rate__c</fullName>
    <label>Is_Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>