force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Metric_Label__c.field-meta.xml
<CustomField>
    <fullName>Metric_Label__c</fullName>
    <label>Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>