force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Min_Volume_JSON__c.field-meta.xml
<CustomField>
    <fullName>Min_Volume_JSON__c</fullName>
    <label>Min Volume By Tier (JSON)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>