force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>