force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Show_In_Boards__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Boards__c</fullName>
    <label>Show_In_Boards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>