force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Status_Values__c.field-meta.xml
<CustomField>
    <fullName>Status_Values__c</fullName>
    <label>Status Values (CSV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>