force-app/main/default/objects/GSquareSalesArenaMetric__mdt/fields/Value_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Value_Field_API__c</fullName>
    <label>Value Field API</label>
    <length>80</length>
    <type>Text</type>
</CustomField>